Added the parsing part

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -5,7 +5,35 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def parse_data(file_path):\n",
+    "    sequences = []\n",
+    "    labels = []\n",
+    "    current_seq = []\n",
+    "    current_label = []\n",
+    "\n",
+    "    with open(file_path, 'r') as file:\n",
+    "        for line in file:\n",
+    "            if line.strip() == \"<>\":\n",
+    "                if current_seq and current_label:\n",
+    "                    sequences.append(current_seq)\n",
+    "                    labels.append(current_label)\n",
+    "                    current_seq = []\n",
+    "                    current_label = []\n",
+    "            elif line.strip() == \"<end>\":\n",
+    "                break\n",
+    "            else:\n",
+    "                parts = line.strip().split()\n",
+    "                if len(parts) == 2:\n",
+    "                    aa, struct = parts\n",
+    "                    current_seq.append(aa)\n",
+    "                    current_label.append(struct)\n",
+    "\n",
+    "    return sequences, labels\n",
+    "\n",
+    "seq,labels = parse_data(\"E:\\CompBioProject\\protein-secondary-structure.test.txt\")\n",
+    "print(seq)"
+   ]
   }
  ],
  "metadata": {
