--- a/Project.ipynb
+++ b/Project.ipynb
@@ -31,6 +31,21 @@
     "\n",
     "    return sequences, labels\n",
     "\n",
+    "def encode_seqeuences(sequences):\n",
+    "    amino_acid_mapping = {\n",
+    "    'A': 1,  'R': 2,  'N': 3,  'D': 4,  'C': 5,\n",
+    "    'Q': 6,  'E': 7,  'G': 8,  'H': 9,  'I': 10,\n",
+    "    'L': 11, 'K': 12, 'M': 13, 'F': 14, 'P': 15,\n",
+    "    'S': 16, 'T': 17, 'W': 18, 'Y': 19, 'V': 20\n",
+    "    }\n",
+    "    encoded_seqs = []\n",
+    "    for sequence in sequences:\n",
+    "        # encode the sequence\n",
+    "        encoded_seq = [amino_acid_mapping[aa] for aa in sequence]\n",
+    "        encoded_seqs.append(encoded_seq)\n",
+    "    return encoded_seqs\n",
+    "\n",
+    "    \n",
     "seq,labels = parse_data(\"E:\\CompBioProject\\protein-secondary-structure.test.txt\")\n",
     "print(seq)"
    ]
