--- a/Project.ipynb
+++ b/Project.ipynb
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -475,47 +475,47 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/20\n",
-      "569/569 [==============================] - 3s 3ms/step - loss: 2.1666 - accuracy: 0.4576 - val_loss: 1.8882 - val_accuracy: 0.5259\n",
+      "569/569 [==============================] - 3s 3ms/step - loss: 1.8677 - accuracy: 0.5160 - val_loss: 1.6515 - val_accuracy: 0.5440\n",
       "Epoch 2/20\n",
-      "569/569 [==============================] - 1s 2ms/step - loss: 1.8351 - accuracy: 0.5381 - val_loss: 1.7362 - val_accuracy: 0.5627\n",
+      "569/569 [==============================] - 2s 3ms/step - loss: 1.5193 - accuracy: 0.5608 - val_loss: 1.3751 - val_accuracy: 0.5827\n",
       "Epoch 3/20\n",
-      "569/569 [==============================] - 1s 2ms/step - loss: 1.6706 - accuracy: 0.5700 - val_loss: 1.6085 - val_accuracy: 0.5774\n",
+      "569/569 [==============================] - 2s 3ms/step - loss: 1.3018 - accuracy: 0.5834 - val_loss: 1.2064 - val_accuracy: 0.6113\n",
       "Epoch 4/20\n",
-      "569/569 [==============================] - 1s 3ms/step - loss: 1.5350 - accuracy: 0.5983 - val_loss: 1.5006 - val_accuracy: 0.5921\n",
+      "569/569 [==============================] - 2s 3ms/step - loss: 1.1660 - accuracy: 0.5932 - val_loss: 1.0994 - val_accuracy: 0.6204\n",
       "Epoch 5/20\n",
-      "569/569 [==============================] - 1s 2ms/step - loss: 1.4248 - accuracy: 0.6189 - val_loss: 1.4089 - val_accuracy: 0.6042\n",
+      "569/569 [==============================] - 2s 3ms/step - loss: 1.0767 - accuracy: 0.6054 - val_loss: 1.0315 - val_accuracy: 0.6130\n",
       "Epoch 6/20\n",
-      "569/569 [==============================] - 2s 3ms/step - loss: 1.3279 - accuracy: 0.6292 - val_loss: 1.3349 - val_accuracy: 0.6136\n",
+      "569/569 [==============================] - 2s 3ms/step - loss: 1.0237 - accuracy: 0.6052 - val_loss: 0.9864 - val_accuracy: 0.6223\n",
       "Epoch 7/20\n",
-      "569/569 [==============================] - 2s 3ms/step - loss: 1.2500 - accuracy: 0.6377 - val_loss: 1.2732 - val_accuracy: 0.6184\n",
+      "569/569 [==============================] - 2s 3ms/step - loss: 0.9808 - accuracy: 0.6104 - val_loss: 0.9552 - val_accuracy: 0.6223\n",
       "Epoch 8/20\n",
-      "569/569 [==============================] - 1s 2ms/step - loss: 1.1863 - accuracy: 0.6467 - val_loss: 1.2207 - val_accuracy: 0.6204\n",
+      "569/569 [==============================] - 2s 3ms/step - loss: 0.9541 - accuracy: 0.6110 - val_loss: 0.9367 - val_accuracy: 0.6238\n",
       "Epoch 9/20\n",
-      "569/569 [==============================] - 2s 3ms/step - loss: 1.1238 - accuracy: 0.6604 - val_loss: 1.1765 - val_accuracy: 0.6252\n",
+      "569/569 [==============================] - 2s 3ms/step - loss: 0.9344 - accuracy: 0.6162 - val_loss: 0.9210 - val_accuracy: 0.6277\n",
       "Epoch 10/20\n",
-      "569/569 [==============================] - 1s 2ms/step - loss: 1.0734 - accuracy: 0.6667 - val_loss: 1.1437 - val_accuracy: 0.6272\n",
+      "569/569 [==============================] - 2s 3ms/step - loss: 0.9245 - accuracy: 0.6134 - val_loss: 0.9111 - val_accuracy: 0.6255\n",
       "Epoch 11/20\n",
-      "569/569 [==============================] - 2s 3ms/step - loss: 1.0320 - accuracy: 0.6725 - val_loss: 1.1147 - val_accuracy: 0.6283\n",
+      "569/569 [==============================] - 2s 3ms/step - loss: 0.9145 - accuracy: 0.6148 - val_loss: 0.9052 - val_accuracy: 0.6303\n",
       "Epoch 12/20\n",
-      "569/569 [==============================] - 1s 3ms/step - loss: 0.9945 - accuracy: 0.6795 - val_loss: 1.0902 - val_accuracy: 0.6252\n",
+      "569/569 [==============================] - 1s 3ms/step - loss: 0.9044 - accuracy: 0.6218 - val_loss: 0.8988 - val_accuracy: 0.6291\n",
       "Epoch 13/20\n",
-      "569/569 [==============================] - 1s 2ms/step - loss: 0.9665 - accuracy: 0.6847 - val_loss: 1.0691 - val_accuracy: 0.6257\n",
+      "569/569 [==============================] - 1s 3ms/step - loss: 0.9017 - accuracy: 0.6180 - val_loss: 0.8970 - val_accuracy: 0.6322\n",
       "Epoch 14/20\n",
-      "569/569 [==============================] - 1s 2ms/step - loss: 0.9372 - accuracy: 0.6951 - val_loss: 1.0518 - val_accuracy: 0.6311\n",
+      "569/569 [==============================] - 1s 2ms/step - loss: 0.8974 - accuracy: 0.6204 - val_loss: 0.8936 - val_accuracy: 0.6308\n",
       "Epoch 15/20\n",
-      "569/569 [==============================] - 1s 2ms/step - loss: 0.9124 - accuracy: 0.6988 - val_loss: 1.0438 - val_accuracy: 0.6314\n",
+      "569/569 [==============================] - 1s 3ms/step - loss: 0.8946 - accuracy: 0.6243 - val_loss: 0.8917 - val_accuracy: 0.6322\n",
       "Epoch 16/20\n",
-      "569/569 [==============================] - 2s 3ms/step - loss: 0.8934 - accuracy: 0.7052 - val_loss: 1.0358 - val_accuracy: 0.6311\n",
+      "569/569 [==============================] - 1s 2ms/step - loss: 0.8950 - accuracy: 0.6198 - val_loss: 0.8925 - val_accuracy: 0.6354\n",
       "Epoch 17/20\n",
-      "569/569 [==============================] - 1s 3ms/step - loss: 0.8730 - accuracy: 0.7093 - val_loss: 1.0380 - val_accuracy: 0.6294\n",
+      "569/569 [==============================] - 1s 3ms/step - loss: 0.8871 - accuracy: 0.6282 - val_loss: 0.8890 - val_accuracy: 0.6317\n",
       "Epoch 18/20\n",
-      "569/569 [==============================] - 1s 2ms/step - loss: 0.8596 - accuracy: 0.7193 - val_loss: 1.0317 - val_accuracy: 0.6351\n",
+      "569/569 [==============================] - 2s 3ms/step - loss: 0.8846 - accuracy: 0.6258 - val_loss: 0.8872 - val_accuracy: 0.6325\n",
       "Epoch 19/20\n",
-      "569/569 [==============================] - 1s 2ms/step - loss: 0.8461 - accuracy: 0.7237 - val_loss: 1.0380 - val_accuracy: 0.6294\n",
+      "569/569 [==============================] - 2s 3ms/step - loss: 0.8828 - accuracy: 0.6256 - val_loss: 0.8870 - val_accuracy: 0.6373\n",
       "Epoch 20/20\n",
-      "569/569 [==============================] - 1s 2ms/step - loss: 0.8397 - accuracy: 0.7287 - val_loss: 1.0422 - val_accuracy: 0.6345\n",
-      "111/111 [==============================] - 0s 2ms/step - loss: 1.0422 - accuracy: 0.6345\n",
-      "Test accuracy: 0.6345120072364807\n"
+      "569/569 [==============================] - 2s 3ms/step - loss: 0.8781 - accuracy: 0.6272 - val_loss: 0.8852 - val_accuracy: 0.6379\n",
+      "111/111 [==============================] - 0s 1ms/step - loss: 0.8852 - accuracy: 0.6379\n",
+      "Test accuracy: 0.6379066705703735\n"
      ]
     }
    ],
@@ -539,12 +539,12 @@
     "\n",
     "def build_improved_model(input_shape):\n",
     "    model = Sequential([\n",
-    "        Conv1D(filters=64, kernel_size=3, activation='relu', input_shape=(input_shape[0], input_shape[1]),\n",
+    "        Conv1D(filters=64, kernel_size=3, activation='sigmoid', input_shape=(input_shape[0], input_shape[1]),\n",
     "               kernel_regularizer=l2(0.01)),  # Single Conv1D layer with increased filters and L2 regularization\n",
     "        BatchNormalization(),\n",
     "        MaxPooling1D(pool_size=2),\n",
     "        Flatten(),\n",
-    "        Dense(40, activation='relu', kernel_regularizer=l2(0.01)),  # L2 regularization on Dense layer\n",
+    "        Dense(40, activation='sigmoid', kernel_regularizer=l2(0.01)),  # L2 regularization on Dense layer\n",
     "        Dropout(0.3),  # Dropout to prevent overfitting\n",
     "        Dense(3, activation='softmax')\n",
     "    ])\n",
