--- a/Archive/Project.ipynb
+++ b/Archive/Project.ipynb
@@ -53,7 +53,7 @@
     "# Function to encode labels\n",
     "def encode_labels(labels):\n",
     "    label_mapping = {'e': 0, 'h': 1, '_': 2, 'end': 3}\n",
-    "    encoded_labels = np.zeros((len(labels), 3))  # No need for encoding 'end'\n",
+    "    encoded_labels = np.zeros((len(labels), 3)) \n",
     "    for idx, label in enumerate(labels):\n",
     "        if label != 'end':\n",
     "            encoded_labels[idx, label_mapping[label]] = 1\n",
@@ -426,7 +426,7 @@
    "source": [
     "y_pred = second_network.predict(intermediate_output_test)\n",
     "y_pred_classes = np.argmax(y_pred, axis=1)\n",
-    "y_true_classes = np.argmax(y_test, axis=1)  # Use the encoded labels for y_test\n",
+    "y_true_classes = np.argmax(y_test, axis=1) \n",
     "\n",
     "# Compute confusion matrix\n",
     "cm = confusion_matrix(y_true_classes, y_pred_classes)\n",
@@ -567,12 +567,12 @@
     "\n",
     "# Function to create sliding windows\n",
     "def create_sliding_windows(encoded_seqs, window_size=13):\n",
-    "    padding = np.zeros((window_size // 2, 21))  # Zero vectors for padding\n",
+    "    padding = np.zeros((window_size // 2, 21))  \n",
     "    padded_seqs = np.vstack([padding, encoded_seqs, padding])\n",
     "    windows = np.array([padded_seqs[i:i + window_size] for i in range(len(encoded_seqs))])\n",
     "    return windows\n",
     "\n",
-    "# Assuming the presence of functions parse_data, encode_sequences, and encode_labels\n",
+    "\n",
     "# Load and process training data\n",
     "seq_train, labels_train = parse_data(\"protein-secondary-structure.train.txt\")\n",
     "eseq_train = encode_sequences(seq_train)\n",
@@ -585,7 +585,7 @@
     "elab_test = encode_labels(labels_test)\n",
     "windowed_input_test = create_sliding_windows(np.array(eseq_test), window_size=13)\n",
     "\n",
-    "# Function to build the second model (cascade)\n",
+    "\n",
     "def build_second_model(input_shape):\n",
     "    model = Sequential([\n",
     "        Dense(40, activation='sigmoid', input_shape=(input_shape,)),  # Input shape matches the output of the first network\n",
@@ -596,9 +596,7 @@
     "                  metrics=['accuracy'])\n",
     "    return model\n",
     "\n",
-    "# Assuming the presence of the train_cascade function\n",
     "\n",
-    "# Build the first model (Convolutional Neural Network)\n",
     "def build_improved_model(input_shape):\n",
     "    model = Sequential([\n",
     "        Conv1D(filters=64, kernel_size=6, activation='sigmoid', input_shape=(input_shape[0], input_shape[1]),\n",
@@ -656,29 +654,29 @@
    ],
    "source": [
     "# Set up a figure to host two subplots vertically\n",
-    "plt.figure(figsize=(7, 12))  # Adjusted figure size for vertical layout\n",
+    "plt.figure(figsize=(7, 12))  \n",
     "\n",
     "# Subplot for the accuracy\n",
     "plt.subplot(2, 1, 1)  # 2 rows, 1 column, 1st subplot (top)\n",
-    "plt.plot(better_history2.history['accuracy'], label='Train Accuracy')  # Use history2 for the second model\n",
-    "plt.plot(better_history2.history['val_accuracy'], label='Validation Accuracy')  # Use history2 for the second model\n",
-    "plt.title('Improved Cascaded Network Accuracy')  # Update the title\n",
+    "plt.plot(better_history2.history['accuracy'], label='Train Accuracy') \n",
+    "plt.plot(better_history2.history['val_accuracy'], label='Validation Accuracy') \n",
+    "plt.title('Improved Cascaded Network Accuracy')  \n",
     "plt.ylabel('Accuracy')\n",
     "plt.xlabel('Epoch')\n",
     "plt.legend(loc='upper left')\n",
     "plt.ylim(0.5,0.8)\n",
     "plt.yticks(np.arange(0.5, 0.8, 0.02))\n",
     "# Subplot for the loss\n",
-    "plt.subplot(2, 1, 2)  # 2 rows, 1 column, 2nd subplot (bottom)\n",
-    "plt.plot(better_history2.history['loss'], label='Train Loss')  # Use history2 for the second model\n",
-    "plt.plot(better_history2.history['val_loss'], label='Validation Loss')  # Use history2 for the second model\n",
+    "plt.subplot(2, 1, 2)  \n",
+    "plt.plot(better_history2.history['loss'], label='Train Loss')  \n",
+    "plt.plot(better_history2.history['val_loss'], label='Validation Loss') \n",
     "plt.title('Improved Cascaded Network Loss')  # Update the title\n",
     "plt.ylabel('Loss')\n",
     "plt.xlabel('Epoch')\n",
     "plt.legend(loc='upper left')\n",
     "plt.ylim(0.5,1)\n",
     "plt.yticks(np.arange(0.5, 1.05, 0.05))\n",
-    "plt.tight_layout()  # Adjust layout to prevent overlap\n",
+    "plt.tight_layout()  \n",
     "plt.show()\n"
    ]
   },
@@ -707,9 +705,9 @@
    ],
    "source": [
     "# Predict using the second network (Improved Cascaded Network)\n",
-    "y_pred = better_second_model.predict(intermediate_output_test)  # Use intermediate_output_test from the cascade architecture\n",
+    "y_pred = better_second_model.predict(intermediate_output_test)  \n",
     "y_pred_classes = np.argmax(y_pred, axis=1)\n",
-    "y_true_classes = np.argmax(elab_test, axis=1)  # Use the encoded labels for elab_test\n",
+    "y_true_classes = np.argmax(elab_test, axis=1) \n",
     "\n",
     "# Compute confusion matrix\n",
     "cm = confusion_matrix(y_true_classes, y_pred_classes)\n",
@@ -786,10 +784,6 @@
    ],
    "source": [
     "\n",
-    "#Test on unseen data sheets\n",
-    "#RS126Data, C : loops\n",
-    "#H : Helix\n",
-    "#E : Stand\n",
     "\n",
     "# Load and process testing data\n",
     "def parse_unseen_data(file_path):\n",
@@ -851,9 +845,6 @@
     "# Create sliding windows\n",
     "window_size = 13\n",
     "windowed_input_test = create_sliding_windows(eseq, window_size)\n",
-    "\n",
-    "# Assuming `first_network` and `second_network` are your original cascade models\n",
-    "# Assuming `better_first_model` and `better_second_model` are your improved cascade models\n",
     "\n",
     "# Test the original cascade model\n",
     "intermediate_output_test_orig = first_network.predict(windowed_input_test)\n",
@@ -1019,8 +1010,7 @@
     "X_train_flat = windowed_input_train.reshape(windowed_input_train.shape[0], -1)\n",
     "X_test_flat = windowed_input_test.reshape(windowed_input_test.shape[0], -1)\n",
     "\n",
-    "# Train a Random Forest model\n",
-    "# Train a Random Forest model\n",
+    "\n",
     "rf = train_random_forest(X_train_flat, np.argmax(elab_train, axis=1), X_test_flat, np.argmax(elab_test, axis=1))\n",
     "\n",
     "# Predict and plot confusion matrix for Random Forest model\n",
